# GBEmulator

./: .gitignore  CMakeLists.txt  README.md  defs.hpp  main.cpp
cpu/: cpu.cpp  cpu.hpp  cpu_loads.cpp  cpu_ops.cpp  cpu_utils.cpp  interrupts.cpp
dma/: dma.cpp  dma.hpp
docs/: general-structure.btex  main.btex
docs/code/: buttons-check.code  clocking.code  cpu-ops.code  cpu-window.code  cpu.code  cuda-colors.code  cuda-fix.code  cuda-init.code  cuda-kernel.code  dma-class.code  dma-copy.code  dma-vblank.code  dma.code  execute.code  game-load.code  general-structure.code  interrupts.code  joypad-class.code  joypad.code  lcd.code  memory.code  ppu-draw-2.code  ppu-draw.code  ppu-interrupt.code  ppu-sprites-draw.code  ppu-stages-1.code  ppu-update.code  ppu.code  rom-load.code  sdl-init.code  tetris-2000.code  tetris-rom-bug.code  timers.code
docs/cpu/: cpu.btex
docs/introductions/: abstract.btex  introduction.btex  premises.btex
docs/memory/: memory.btex
joypad/: joypad.cpp  joypad.hpp
memory/: memory.cpp  memory.hpp
ppu/: LCD.hpp  bg_ppu.cpp  fifo.hpp  oam.hpp  oam_ppu.cpp  ppu.cpp  ppu.hpp  video.cu  video.cuh
ppu/FIFO/: FIFO.cpp  FIFO.hpp
ppu/LCD/: LCD.cpp  LCD.hpp
ppu/gpu/: gpu.cu  gpu.cuh
ppu/utils/: utils.cpp  utils.hpp
profiling/: profiling.hpp
timers/: timers.cpp  timers.hpp
tools/: dump_diffs.py  dump_viewer.py
